--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -361,7 +361,7 @@ $\sim e^{x^2}$ indice della stessa insufficienza di dati al fine di stabilire
 con precisione significativa il valore di $\mu_y$.
 \begin{figure}[!htb]
 	\centering 
- 		%\includegraphics[scale=1.3]{./gestione.pdf}
+ 		\includegraphics[scale=0.32]{./varmuy.pdf}
  	\caption{La media $\mu_y$ è rappresentata dalla linea rossa, mentre
 	l'area in rosso indica il valore di $\var{\mu_y}$ al variare dei
 	dati (in blu) lungo $x$. \label{fig: varmuy}}
@@ -415,27 +415,27 @@ tra due set successivi.
 
 \begin{figure}[!htb]
 	\centering 
- 		%\includegraphics[scale=1.3]{./gestione.pdf}
+ 		\includegraphics[scale=0.9]{./nofilter.pdf}
 	\caption{Grafico in scala semilogaritmica prima del filtraggio dati:
 	si evidenziano in rosso i dati da scartare, in nero quello tenuti.
 	\label{fig: nofilter}}
 \end{figure}
 \begin{figure}[!htb]
 	\centering 
- 		%\includegraphics[scale=1.3]{./gestione.pdf}
+ 		\includegraphics[scale=0.9]{./filtered.pdf}
  	\caption{Grafico in scala semilogaritmica dopo il filtraggio dati.
 	\label{fig: filtered}}
 \end{figure}
 \begin{figure}[!htb]
 	\centering 
- 		%\includegraphics[scale=1.3]{./gestione.pdf}
+ 		\includegraphics[scale=0.32]{./comparison.pdf}
  	\caption{Confronto dei grafici delle $\var{\mu_y}$ su due set di
 	dati consecutivi. \label{fig: comparison}}
 \end{figure}
 \section{Appendice B: Metodo di Fit}
 Partiamo dall'osservazione che la tensione ai capi del diodo può essere
 scomposta in $\Delta V_r$ e $\Delta V_d$ come illustrato in figura:
-%\input{./figs/divider.tex}
+\input{./figs/divider.tex}
 dove il resistore a sinistra indica proprio la resistenza di un diodo reale,
 mentre il diodo alla sua destra rappresenta una giunzione bipolare PN, ossia
 il diodo ideale descritto dall’equazione di Shockley.
