--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -232,6 +232,9 @@ grafico in scala semilogaritmica (grafico \ref{fig: sck_lin}).
 	con sovrapposto il modello di best-fit \label{fig: sck_log}}
 \end{figure}
 
+%================================================================
+%                          Conclusioni
+%================================================================
 \section{Conclusioni}
 L'andamento dei dati sperimentali non risulta essere ben descritto dalla legge
 \eqref{eq: model}. Ciò può essere spiegato sulla base della non linearità dei
@@ -246,6 +249,10 @@ della curva di Shockley per poi appiattirsi a partire da un particolare valore
 della tensione, esattamente come ci aspetteremo da un andamento lineare.
 Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi.
 
+
+%================================================================
+%                        Appendice A
+%================================================================
 \section{Appendice A: Filtraggio Dati}
 \subsection{Introduzione}
 Durante l’esperienza si è raccolto un grande numero di dati, acquisiti in
@@ -443,6 +450,10 @@ tra due set successivi.
  	\caption{Confronto dei grafici delle $\var{\mu_y}$ su due set di
 	dati consecutivi. \label{fig: comparison}}
 \end{figure}
+
+%================================================================
+%                        Appendice b
+%================================================================
 \section{Appendice B: Metodo di Fit}
 Partiamo dall'osservazione che la tensione ai capi del diodo può essere
 scomposta in $\Delta V_r$ e $\Delta V_d$ come illustrato in figura:
