--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -102,7 +102,6 @@ essere espressa secondo la legge:
 	\Delta V = \Delta V_d + \Delta V_r = \eta V_T \ln{\left(\frac{
 	I+I_0}{I_0}\right)} + RI
 \end{equation}
-(inserire una figura per far capire cosa sono $I$ e $\Delta V$)\newline
 (inserire dei grafici di confronto)
 
 
@@ -316,7 +315,7 @@ resistenza interna. Dal grafico in scala semilogaritmica, inoltre, osserviamo
 che i dati risultano possedere un andamento simile a quello caratteristico 
 della curva di Shockley per poi appiattirsi a partire da un particolare valore
 della tensione, esattamente come ci aspetteremo da un andamento lineare.
-Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi.
+Pertanto potremo aspettarci che i parametri stimati dal fit siano significativi e che la modellizzazione proposta sia una buona approssimazione del diodo reale nelle condizioni considerate.
 
 %================================================================
 %                        Appendice A
