aggiunto grafico di esempio

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -102,7 +102,11 @@ essere espressa secondo la legge:
 	\Delta V = \Delta V_d + \Delta V_r = \eta V_T \ln{\left(\frac{
 	I+I_0}{I_0}\right)} + RI
 \end{equation}
-(inserire dei grafici di confronto)
+\begin{figure}[H]
+	\centering 
+ 		\includegraphics[scale=0.25]{./confronto_curve.png}
+ 	\caption{confronto fra curva si Shokley (in rosso) e la legge \eqref{eq: model} (in viola)}
+\end{figure}
 
 
 %================================================================
